--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quran Wisdom Academy - Home</title>
+  <title>TEST-DEMO-123</title>
   <link rel="shortcut icon" href="logo.png" type="png">
   <style>
     @font-face {
@@ -223,3 +223,4 @@
 
 </body>
 </html>
+
